--- a/ekart/index.html
+++ b/ekart/index.html
@@ -14,6 +14,24 @@
 
     <h1 id="prod">Products</h1>
     <div class="image"><img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" alt=""></div>
+    <!-- <form action="">
+        <label for="firstname">firstname</label>
+        <input type="text" name="" id="firstname">
+        <br><br>
+        <label for="lastname">lastname</label>
+        <input type="password" name="" id="lastname">
+        <br><br>
+        <label for="password">your password:</label>
+        <input type="password" name="" id="password">
+        <br><br>
+        <input type="email" name="" id="">
+        <input type="color" name="" id="">
+        <input type="date" name="" id="">
+        <label type="male">male</label>
+        <input type="radio" name="gender" id="female">
+        <input type="submit" name="" id="">
+        <textarea name="" type="" id="">
+    </form> -->
     <h1 id="money">not a bomb this is a cat for a low price of 250000$</h1>
     <p id="mabye">possibly free shipping and tax *this isnt amazon prime</p>
     <p id="jk">just kidding this is a bomb that can explode at any time</p>
