--- a/ekart/contact.html
+++ b/ekart/contact.html
@@ -17,8 +17,8 @@
         <textarea name="Message" id="Message" cols="30" rows="10" class="text thing"></textarea>
     </form>
 <button id="button">Send Message</button>
-<p>for more information on us tap </p>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"target="_blank">here</a>
+<p id="eg">for more information on us tap </p>
+<div id="link"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"target="_blank">here</a></div>
 <div id="cat"><img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" alt=""></div></div>
 </body>
 </html>
