--- a/ekart/bootstrap.html
+++ b/ekart/bootstrap.html
@@ -20,17 +20,33 @@
         <strong>Holy heal!</strong> jesus is coming for you.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
+<div class="row">
+<div class="col">
+    
       <div class="card" style="width: 18rem;">
+        <button type="button" class="btn btn-primary btn-sm">+1000%</button>
+<button type="button" class="btn btn-secondary btn-sm">now at a high price of $2,500,000 usd</button>
         <img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">this is a thermal nucular bomb set to explode at the year 23102 9:21 PM (it can not be disarmed).</p>
         </div>
+        <button type="button" class="btn btn-primary btn-sm">add to cart</button>
+<button type="button" class="btn btn-secondary btn-sm">buy n o w</button>
+    </div>
+    </div>
+        <div class="col">
         <div class="card" style="width: 18rem;">
             <img src="https://th.bing.com/th/id/OIP.7FaTgT6k0ItUGGlwzUXPawHaHa?w=199&h=200&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">normal mug.</p>
+              <p>đ9,972,900.00 Vietnamese đồng</p>
+              <button type="button" class="btn btn-primary btn-sm">add to cart</button>
+<button type="button" class="btn btn-secondary btn-sm">buy NOW</button>
             </div>
           </div>
+</div>
+</div>
+
           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -39,21 +55,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://th.bing.com/th/id/OIP.IrikJyjFGNmnebDnolyFowHaLH?w=115&h=180&c=7&r=0&o=5&pid=1.7" class="d-block w-100" alt="...">
+                <img src="https://th.bing.com/th/id/OIP.IrikJyjFGNmnebDnolyFowHaLH?w=115&h=180&c=7&r=0&o=5&pid=1.7" class="d-block w-70" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>insert label here</h5>
                   <p>what do you think this is.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://th.bing.com/th/id/OIP.2ms29dGRVCOSaoDXGx9SOQHaHa?w=188&h=188&c=7&r=0&o=5&pid=1.7" class="d-block w-100" alt="...">
+                <img src="https://th.bing.com/th/id/OIP.2ms29dGRVCOSaoDXGx9SOQHaHa?w=188&h=188&c=7&r=0&o=5&pid=1.7" class="d-block w-80" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>bruh</h5>
                   <p>this sucks.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://th.bing.com/th/id/OIP.sn4j7fHclUx_1fyh0M15FQHaEP?w=292&h=180&c=7&r=0&o=5&pid=1.7" class="d-block w-100" alt="...">
+                <img src="https://th.bing.com/th/id/OIP.sn4j7fHclUx_1fyh0M15FQHaEP?w=292&h=180&c=7&r=0&o=5&pid=1.7" class="d-block w-90" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>go touch grass </h5>
                   <p>bozo.</p>
