--- a/ekart/bootstrap.html
+++ b/ekart/bootstrap.html
@@ -28,7 +28,7 @@
 <button type="button" class="btn btn-secondary btn-sm">now at a high price of $2,500,000 usd</button>
         <img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">this is a thermal nucular bomb set to explode at the year 23102 9:21 PM (it can not be disarmed).</p>
+          <p class="card-text">this is a thermal nucular bomb set to explode at the year 23102 9:21 PM (it can not be disarmed and can not be destroyed).</p>
         </div>
         <button type="button" class="btn btn-primary btn-sm">add to cart</button>
 <button type="button" class="btn btn-secondary btn-sm">buy n o w</button>
@@ -81,6 +81,7 @@
   </div>
 </div>
 
+
   <div class="col-2">
 <div class="card" style="width: 18rem;">
     <div class="card-body">
@@ -89,6 +90,33 @@
     </div>
   </div>
 </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <div class="row">
+      <div class="col">
+        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+        <p>scout mains laughs at you</p>
+      </div>
+      <div class="col">
+        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+        <p>he dominates spys</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+        <p>scout beat blue spy</p>
+      </div>
+      <div class="col">
+        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+        <p>he likes chicken</p>
+      </div>
+    </div>
+    <p class="card-text">no more kneecaps.</p>
+  </div>
 </div>
 
           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
