drunk irish man

--- a/ekart/bootstrap.html
+++ b/ekart/bootstrap.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            Bootstrap
+            Bootstrap&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gun shop
           </a>
         </div>
       </nav>
@@ -92,17 +92,19 @@
 </div>
 </div>
 
-<div class="card" style="width: 18rem;">
+<div class="row">
+<div class="col-2">
+<div class="card" style="width: 18rem; text-decoration: none;">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">he laugh at you</h5>
     <div class="row">
       <div class="col">
         <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
         <p>scout mains laughs at you</p>
       </div>
       <div class="col">
-        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
-        <p>he dominates spys</p>
+        <img src="https://th.bing.com/th/id/OIP.V_5wBHkkGvmE4zSlJGvhcQHaHc?w=179&h=180&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+        <p>hes a drunk irish man</p>
       </div>
     </div>
     <div class="row">
@@ -116,47 +118,35 @@
       </div>
     </div>
     <p class="card-text">no more kneecaps.</p>
+    <a href="..." class="card-link">this is a link</a>
   </div>
 </div>
+</div>
 
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://th.bing.com/th/id/OIP.IrikJyjFGNmnebDnolyFowHaLH?w=115&h=180&c=7&r=0&o=5&pid=1.7" class=" w-50" alt="...">
-                <div class="carousel-caption d-none ">
-                  <h5>insert label here</h5>
-                  <p>what do you think this is.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://th.bing.com/th/id/OIP.2ms29dGRVCOSaoDXGx9SOQHaHa?w=188&h=188&c=7&r=0&o=5&pid=1.7" class=" w-50" alt="...">
-                <div class="carousel-caption d-none ">
-                  <h5>bruh</h5>
-                  <p>this sucks.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://th.bing.com/th/id/OIP.sn4j7fHclUx_1fyh0M15FQHaEP?w=292&h=180&c=7&r=0&o=5&pid=1.7" class=" w-50" alt="...">
-                <div class="carousel-caption d-none ">
-                  <h5>go touch grass </h5>
-                  <p>bozo.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+<div class="col-2">
+<div class="card" style="width: 18rem;">
+  <img src="https://th.bing.com/th/id/OIP.izQmGSk1Q0tsPz0yKSGeDgHaGn?w=208&h=185&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">wide</h5>
+    <p class="card-text">world wide.</p>
+    <a href="#" class="btn btn-primary">you can not buy him</a>
+  </div>
+</div>
+</div>
+
+<div class="col-2">
+<div class="card" style="width: 18rem; height: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+
+
+
 
 
 
