--- a/ekart/bootstrap.html
+++ b/ekart/bootstrap.html
@@ -92,6 +92,7 @@
 </div>
 </div>
 
+
 <div class="row">
 <div class="col-2">
 <div class="card" style="width: 18rem; text-decoration: none;">
@@ -109,12 +110,12 @@
     </div>
     <div class="row">
       <div class="col">
-        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
-        <p>scout beat blue spy</p>
+        <img src="https://www.bing.com/th/id/OGC.964844f3e972556716f36e4eba3db3d9?pid=1.7&rurl=https%3a%2f%2fvignette.wikia.nocookie.net%2fdiepio%2fimages%2f6%2f65%2fTF2.gif%2frevision%2flatest%3fcb%3d20161009072433&ehk=bfFZda03zVFkdshP4Png2GsqTGHBRp2JiL9chCTO7s4%3d" class="card-img-top rounded-pill" alt="...">
+        <p>they dance</p>
       </div>
       <div class="col">
-        <img src="https://th.bing.com/th/id/OIP.wk8Z1hbuOlRz8TJxbuURrQAAAA?w=136&h=199&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
-        <p>he likes chicken</p>
+        <img src="https://th.bing.com/th/id/OIP.FQ8pn1dyrwGuu_qHoFUNoQAAAA?w=115&h=182&c=7&r=0&o=5&pid=1.7" class="card-img-top" alt="...">
+        <p>spy</p>
       </div>
     </div>
     <p class="card-text">no more kneecaps.</p>
