--- a/ekart/bootstrap-form.html
+++ b/ekart/bootstrap-form.html
@@ -11,7 +11,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            Bootstrap&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gun shop&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact us
+            Bootstrap&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; shop&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact us
           </a>
         </div>
       </nav>
@@ -32,7 +32,7 @@
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.(mabye.....)</small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
@@ -40,7 +40,7 @@
         </div>
         <div class="form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          <label class="form-check-label" for="exampleCheck1">Check me out if you are not ok</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
