some thing is wrong

--- a/ekart/Javascript/index.html
+++ b/ekart/Javascript/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript basics</title>
 </head>
-<body>
-    <h1 class="heading">Навеки объединенные дружбой и трудом, Наши могучие республики всегда будут существовать. Великий Советский Союз переживет века. Мечта народа о своей крепости в безопасности. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.Через дни темные и бурные, куда вел нас Великий Ленин Наши глаза увидели яркое солнце свободы над головой А Сталин наш вождь с верой в народ, Вдохновил нас на создание земли, которую мы любим. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.Мы боролись за будущее, уничтожали оккупантов, И принес нашей Родине лавры славы. Наша слава будет жить в памяти народов И все поколения будут чтить ее имя. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.Мы боролись за будущее, уничтожали оккупантов, И принес нашей Родине лавры славы. Наша слава будет жить в памяти народов И все поколения будут чтить ее имя. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.</h1>
-    <h1 id="heading1">no</h1>
+<body class="body">
+    <h3 class="heading">Навеки объединенные дружбой и трудом, Наши могучие республики всегда будут существовать. Великий Советский Союз переживет века. Мечта народа о своей крепости в безопасности. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.Через дни темные и бурные, куда вел нас Великий Ленин Наши глаза увидели яркое солнце свободы над головой А Сталин наш вождь с верой в народ, Вдохновил нас на создание земли, которую мы любим. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.Мы боролись за будущее, уничтожали оккупантов, И принес нашей Родине лавры славы. Наша слава будет жить в памяти народов И все поколения будут чтить ее имя. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.Мы боролись за будущее, уничтожали оккупантов, И принес нашей Родине лавры славы. Наша слава будет жить в памяти народов И все поколения будут чтить ее имя. Да здравствует наша советская Родина, Построен могучей рукой народа. Да здравствует наш народ, единый и свободный. Крепкие в нашей дружбе испытаны огнем. Пусть наш багровый флаг вдохновляет, Сияет во славе для всех людей.</h1>
+    <h3 id="heading1">no</h1>
+    <h1 id="insane">TOP 10 CLINICLY INSANE PEOPLE</h1>
+    <li class="numbers">random person from florida</li>
+    <li class="numbers">flat earthers</li>
+    <li class="numbers">conspirist</li>
+    <li class="numbers">mat pat</li>
+    <li class="numbers">karens</li>
+    <li class="numbers">monke spin</li>
+    <li class="numbers">people who make spinning things</li>
+    <li class="numbers">politics</li>
+    <li class="numbers">roblox players</li>
+    <li class="numbers">me</li>
+    <li class="numbers">mark zukerburg</li>
+    <div id="img"><img src="https://cdn3.emoji.gg/emojis/6276-spinning-cat.gif" alt=""></div>
     <script src="script.js"></script>
 </body>
 </html>
