--- a/ekart/Javascript/not_netflix.html
+++ b/ekart/Javascript/not_netflix.html
@@ -5,40 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>isnt nextflix</title>
     <link rel="stylesheet" href="not_netflix.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body id="body">
     <nav class="navbar navbar-light bg-transparent">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="https://th.bing.com/th/id/OIP.v7mhiBa7_bhbv7Ncsw6BSQHaHa?w=175&h=180&c=7&r=0&o=5&pid=1.7" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            otflix
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-                <button>sign nothing</button>
-              </div>
+            <p class="not">otflix</p>
+            <select class="form-select d-inline drop" aria-label="Default select example">
+              <option selected>english</option>
+              <option value="1">spanish</option>
+              <option value="2">vietnamese</option>
+              <option value="3">french</option>
+            </select>
+            <button type="button" class="btn btn-dark">don't sign up</button>
           </a>
         </div>
       </nav>
     <h1 id="text_1">stream absolutly nothing</h1>
     <p id="text_2">this is still not netflix</p>
+      <input type="email" class="form-control mb-3 emailaddress d-inline" id="floatingInput" placeholder="Email Address">
+    <button class="btn btn-transparent d-inline" type="submit">Button does Something</button>
+    
     <script src="not_netflix.js"></script>
-    <div class="form-floating mb-3 emailaddress">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-        <span class="border"><button class="btn btn-transparent btn-" type="submit">Button does Something</button></span>
-      </div>
-      <div class="alert alert-primary alert-dismissible fade show" role="alert">
-        <strong>Holy heal!</strong> jesus is coming for you.
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
