--- a/ekart/Javascript/not_fanta.html
+++ b/ekart/Javascript/not_fanta.html
@@ -18,7 +18,12 @@
 
             <img class="icon" src="../../images/logo.png" alt="">
 
+
     </div>
+
+
+    <img src="../../images/fanta_background.png" alt="">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
