--- a/not_fanta/not_fanta.html
+++ b/not_fanta/not_fanta.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fruit Flavored Sodas | Fanta®</title>
+    <link rel="shortcut icon" href="../images/fanta.logo.png" type="image/x-icon">
     <link rel="stylesheet" href="not_fanta.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -16,13 +17,13 @@
 
             <a href="#" class="product">Shop Now</a>
 
-            <img class="icon" src="../../images/logo.png" alt="">
+            <img class="icon" src="../images/logo.png" alt="">
 
 
     </div>
 
 
-    <img src="../../images/fanta_background.png" alt="">
+    <img src="../images/fanta_background.png" alt="">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
