--- a/not_netflix/not_netflix.html
+++ b/not_netflix/not_netflix.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>isnt nextflix</title>
     <link rel="stylesheet" href="not_netflix.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body id="body">
-    <nav class="navbar navbar-light bg-transparent">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="https://th.bing.com/th/id/OIP.v7mhiBa7_bhbv7Ncsw6BSQHaHa?w=175&h=180&c=7&r=0&o=5&pid=1.7" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            <p class="not">otflix</p>
-            <select class="form-select d-inline drop" aria-label="Default select example">
-              <option selected>english</option>
-              <option value="1">spanish</option>
-              <option value="2">vietnamese</option>
-              <option value="3">french</option>
-            </select>
-            <button type="button" class="btn btn-dark">don't sign up</button>
-          </a>
-        </div>
-      </nav>
-    <h1 id="text_1">stream absolutly nothing</h1>
+  </head>
+  <body id="body">
+    <div class="bar">
+          <img src="https://o.remove.bg/downloads/6bd22ac4-71d6-4e88-9924-a7de0aad37a9/netflix-logo-removebg-preview.png" alt="" width="200" height="45" class="d-inline-block align-text-top">
+          <select class="form-select d-inline drop" aria-label="Default select example">
+            <option selected>english</option>
+            <option value="1">spanish</option>
+            <option value="2">vietnamese</option>
+            <option value="3">french</option>
+          </select>
+          <button type="button" class="btn btn-dark">don't sign up</button>
+    </div>
+    <h1 id="text_1"><bold>stream absolutly nothing</bold></h1>
     <p id="text_2">this is still not netflix</p>
-      <input type="email" class="form-control mb-3 emailaddress d-inline" id="floatingInput" placeholder="Email Address">
-    <button class="btn btn-transparent d-inline" type="submit">Button does Something</button>
-    
     <script src="not_netflix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
