--- a/not_netflix/not_netflix.html
+++ b/not_netflix/not_netflix.html
@@ -3,23 +3,28 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://o.remove.bg/downloads/565bcaa3-d276-4d60-9154-4e96a232fd7f/OIP-removebg-preview.png" type="image/x-icon">
     <title>isnt nextflix</title>
     <link rel="stylesheet" href="not_netflix.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body id="body">
     <div class="bar">
-          <img src="https://o.remove.bg/downloads/6bd22ac4-71d6-4e88-9924-a7de0aad37a9/netflix-logo-removebg-preview.png" alt="" width="200" height="45" class="d-inline-block align-text-top">
+          <img src="../images/netflix logo.png" alt="" width="150" height="40" class="d-inline-block align-text-top netlogo">
           <select class="form-select d-inline drop" aria-label="Default select example">
-            <option selected>english</option>
-            <option value="1">spanish</option>
-            <option value="2">vietnamese</option>
-            <option value="3">french</option>
+            <option selected>English</option>
+            <option value="1">Spanish</option>
+            <option value="2">Vietnamese</option>
+            <option value="3">French</option>
           </select>
-          <button type="button" class="btn btn-dark">don't sign up</button>
+          <button class="buttonbegone">"that"</button>
     </div>
     <h1 id="text_1"><bold>stream absolutly nothing</bold></h1>
     <p id="text_2">this is still not netflix</p>
+    <div class="emailthing">
+      <input type="text" class="box" placeholder="emanuel address" aria-label="Recipient's username">
+      <button class="yesh">get NOW ></button>
+    </div>
     <script src="not_netflix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
